# Live-Streaming-Relay

./: OBS-SETUP-GUIDE.md  PROJECT-STRUCTURE.md  QUICK-START-GUIDE.md  README-StreamRelay.md  README-WINDOWS.md  README.md  StreamRelay.csproj  StreamRelay.exe.cs  build-desktop-app.ps1  build-obs-plugin.ps1  configure-keys.sh  install.sh  monitor-streams.sh  nginx-rtmp.service  nginx.conf  project.md  quick-start.sh  setup-windows.ps1  setup-wizard.ps1  setup-wizard.sh  setup.bat  test-obs-connection.bat  test-stream.sh  validate-project.ps1  validate-project.sh
obs-plugin/: CMakeLists.txt  build-plugin.ps1  plugin-macros.h  stream-relay-plugin.cpp  validate-syntax.ps1
obs-plugin/data/: README.txt  nginx.conf.template
